// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should call -engine- middleware 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "engine": true,
  "key": "code",
  "path": "testPrefix",
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "type": "@trampss/ADD_TESTPREFIX",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
    },
  },
}
`;

exports[`reducer should call -post- middlewares 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "key": "code",
  "path": "testPrefix",
  "post1": true,
  "post2": true,
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "post1": true,
      "type": "@trampss/ADD_TESTPREFIX",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
      "key": "code",
      "path": "testPrefix",
      "post1": true,
      "prev": Object {
        "action": Object {
          "payload": Object {
            "code": "1",
            "some": "info",
          },
          "type": "@trampss/ADD_TESTPREFIX",
        },
        "state": Object {
          "data": Array [
            Object {
              "some": "data",
            },
          ],
        },
      },
    },
  },
}
`;

exports[`reducer should call -pre- middlewares 1`] = `
Object {
  "data": Array [
    Object {
      "some": "data",
    },
  ],
  "key": "code",
  "path": "testPrefix",
  "pre1": true,
  "pre2": true,
  "prev": Object {
    "action": Object {
      "payload": Object {
        "code": "1",
        "some": "info",
      },
      "pre1": true,
      "type": "@trampss/ADD_TESTPREFIX",
    },
    "state": Object {
      "data": Array [
        Object {
          "some": "data",
        },
      ],
      "key": "code",
      "path": "testPrefix",
      "pre1": true,
      "prev": Object {
        "action": Object {
          "payload": Object {
            "code": "1",
            "some": "info",
          },
          "type": "@trampss/ADD_TESTPREFIX",
        },
        "state": Object {
          "data": Array [
            Object {
              "some": "data",
            },
          ],
        },
      },
    },
  },
}
`;
